fix: add gap between donation image and donation content

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -347,6 +347,7 @@ p {
   height: 282px;
 
   display: flex;
+  gap: 30px;
 }
 
 .donation-content {
